# govee-temperature

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  hacs.json  pyproject.toml
custom_components/govee_temperature/: __init__.py  binary_sensor.py  client.py  config_flow.py  const.py  coordinator.py  manifest.json  models.py  sensor.py  strings.json
govee_temperature/: __init__.py  client.py  main.py  models.py
