[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "govee-temperature"
version = "0.1.0"
description = "Govee API temperature fetcher with FastAPI endpoint"
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
requires-python = ">=3.11"

[project.scripts]
govee-temperature = "govee_temperature.main:main"

[tool.hatch.build.targets.wheel]
packages = ["govee_temperature"]